snapshot-tests/tests/snapshots/parser__bad_strings__hex2.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidHexEscape]: invalid hex escape character in string: `"` at `foo`
  ┌─ hex2:1:10
  │
1 │ foo = "\u"
  │          ^ invalid hex escape '"'
